--- a/manifests/shoppingapi.yaml
+++ b/manifests/shoppingapi.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: shoppingapi
-          image: shoppingacr.azurecr.io/shoppingapi
+          image: aksdeploy.azurecr.io/shoppingapi:v1
           imagePullPolicy: IfNotPresent          
           ports:
             - containerPort: 80
